--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,78 @@
+2006-09-06  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/28886
+	* g++.dg/template/array16.C: New test.
+
+2006-09-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/execute/20060905-1.c: New test.
+
+2006-09-05 Paul Thomas <pault@gcc.gnu.org>
+
+	PR fortran/28908
+	* gfortran.dg/used_types_7.f90: New test.
+	* gfortran.dg/used_types_8.f90: New test.
+	* gfortran.dg/used_types_9.f90: New test.
+
+2006-09-04  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/compile/20060904-1.c: New test.
+
+2006-09-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/28878
+	* g++.dg/parse/crash33.C: New test.
+
+2006-09-01  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	PR middle-end/28814
+	* gcc.dg/torture/pr28814.c: New testcase.
+
+2006-09-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/28683
+	* gcc.c-torture/compile/20060823-1.c: New test.
+
+2006-08-31  Andreas Krebbel  <krebbel1@de.ibm.com>
+
+	PR target/24367
+	* gcc.dg/pr24367.c: New testcase.
+
+2006-08-30  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/28885
+	* gfortran.dg/aliasing_dummy_2.f90: New test.
+
+	PR fortran/20067
+	* gfortran.dg/generic_5.f90: Change error message.
+
+	PR fortran/28873
+	* gfortran.dg/generic_6.f90: New test.
+
+	PR fortran/25077
+	* gfortran.dg/redefined_intrinsic_assignment.f90: New test.
+
+	PR fortran/25102
+	* gfortran.dg/invalid_interface_assignment.f90: New test.
+
+	PR fortran/24866
+	* gfortran.dg/module_proc_external_dummy.f90: New test.
+
+2006-08-29  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/28788
+	* gfortran.dg/used_types_5.f90: New test.
+	* gfortran.dg/used_types_6.f90: New test.
+
+	PR fortran/28005
+	* gfortran.dg/matmul_3.f90: New test.
+
+2006-08-28  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/28860
+	* g++.dg/template/ttp22.C: New test.
+
 2006-08-27  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/28058
