--- a/gcc-4_1-branch/libjava/classpath/ChangeLog
+++ b/gcc-4_1-branch/libjava/classpath/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-08  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* tools/gnu/classpath/tools/appletviewer/Main.java: Warn about
+	missing security manager when run in standalone mode.
+
 2006-07-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Port to hosts whose 'sort' and 'tail' implementations
