2006-09-13  Andrew Haley  <aph@redhat.com>
	* java/util/PriorityQueue.java: Throw IllegalArgumentException for
	capacity < 1.
	(Iterator.remove()): Decrement index after removing element.

2006-09-13  Andrew Haley  <aph@redhat.com>

	* Makefile.am: Add sun/reflect/natReflection.cc.
	* Makefile.in: Rebuild.
	* sun/reflect/natReflection.cc: New file.
	* sun/reflect/Reflection.java (getCallerClass): Now native.
	* stacktrace.cc (GetClassContext): Don't check the class if
	checkClass is NULL.
	
2006-09-13  Andrew Haley  <aph@redhat.com>

	* external/jsr166/java/util/concurrent/atomic/AtomicIntegerFieldUpdater.java:
	Revert previous gcj-specific disabling of checks.
	* external/jsr166/java/util/concurrent/atomic/AtomicReferenceFieldUpdater.java:
	Likewise.
	* classpath/external/jsr166/java/util/concurrent/atomic/AtomicLongFieldUpdater.java:
	Likewise.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@116923 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2006-09-13  Andrew Haley  <aph@redhat.com>
+
+	* Makefile.am: Add sun/reflect/natReflection.cc.
+	* Makefile.in: Rebuild.
+	* sun/reflect/natReflection.cc: New file.
+	* sun/reflect/Reflection.java (getCallerClass): Now native.
+	* stacktrace.cc (GetClassContext): Don't check the class if
+	checkClass is NULL.
+	
 2006-09-12  Andrew Haley  <aph@redhat.com>
 
 	* java/lang/Thread.java (alive_flag): Make it a byte.
