--- a/gcc-4_1-branch/gcc/cp/ChangeLog
+++ b/gcc-4_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2006-09-07  Jason Merrill  <jason@redhat.com>
+
+	PR c++/26957
+	* method.c (use_thunk): Clear DECL_HAS_VALUE_EXPR_P on copied
+	parms.
+
 2006-09-06  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/28886
