--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,59 @@
+2006-09-12  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/pr28243.c: New test.
+
+2006-09-11  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR testsuite/29007
+	* gcc.dg/long-long-cst1.c (t): Add cast to
+	__SIZE_TYPE__ before casting to int.
+	(main): Return 0 on success.
+
+2006-09-12  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR libfortran/28890
+	gfortran.dg/assumed_charlen_function_5.f90: New test.
+
+2006-09-11  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/13685
+	* gcc.target/i386/pr13685.c: New test.
+
+2006-09-11  Jack Howarth  <howarth@bromo.med.uc.edu>
+
+	PR testsuite/28950
+	* gcc.target/powerpc/ppc-and-1.c: Fix regex.
+
+2006-09-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/pr28726.c: New test.
+
+2006-09-10  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/execute/20060910-1.c: New test.
+
+2006-09-10  Richard Sandiford  <richard@codesourcery.com>
+
+	PR target/29006
+	* gcc.c-torture/execute/pr29006.c: New test.
+
+2006-09-10  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR libfortran/28923
+	gfortran.dg/array_initializer_2.f90: Fill in missing index start value.
+	gfortran.dg/array_initializer_3.f90: New test.
+
+	PR libfortran/28947
+	gfortran.dg/matmul_4.f90: New test.
+
+	PR fortran/28959
+	gfortran.dg/used_types_10: New test.
+
+2006-09-09  Richard Sandiford  <richard@codesourcery.com>
+
+	PR rtl-optimization/28634
+	* gcc.c-torture/execute/ieee/pr28634.c: New test.
+
 2006-09-06  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/28886
