--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,13 @@
+2006-09-15  Uros Bizjak  <uros@kss-loka.si>
+
+	PR target/28946
+	* gcc.target/i386/pr28946.c: New test.
+
+2006-09-15  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/29051
+	* gfortran.dg/oldstyle_3.f90: New test.
+
 2006-09-12  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/pr28243.c: New test.
