--- a/sourcerygxx-4_1/gcc/config/m68k/m68k.md
+++ b/sourcerygxx-4_1/gcc/config/m68k/m68k.md
@@ -126,8 +126,12 @@
 
 ;; Registers by name.
 (define_constants
-  [(A0_REG		8)
+  [(D0_REG		0)
+   (A0_REG		8)
+   (A1_REG		9)
+   (PIC_REG		13)
    (SP_REG		15)
+   (FP0_REG		16)
   ])
 
 (include "predicates.md")
