--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,32 @@
+2006-09-18 Paul Thomas <pault@gcc.gnu.org>
+
+	PR fortran/28526
+	* gfortran.dg/keyword_symbol_1.f90: New test.
+
+	* gfortran.dg/spread_shape_1.f90: Add missing warning with
+	pedantic compilation option.
+
+2006-09-18  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	PR tree-optimization/28900
+	* gcc.dg/torture/pr28900.c: New testcase
+
+2006-09-18  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	J"orn Rennecke  <joern.rennecke@st.com>
+	Richard Guenther  <rguenther@suse.de>
+	Adam Nemet  <anemet@caviumnetworks.com>
+
+	PR middle-end/27226
+	* gcc.target/mips/memcpy-1.c: New testcase.
+
+2006-09-18  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/29060
+	* gfortran.dg/spread_shape_1.f90: New test.
+
 2006-09-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gcc.target/i386/pr28946.c (dg-options): Use -Os instead -O.
