gcc/ 	* config/m68k/m68k.c (print_operand): Handle '?'. 	* config/m68k/m68k.h (PRINT_OPERAND_PUNCT_VALID_P): Accept '?'. 	* config/m68k/m68k.md (load_got): New.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/csl@117094 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/sourcerygxx-4_1/gcc/config/m68k/m68k.md
+++ b/sourcerygxx-4_1/gcc/config/m68k/m68k.md
@@ -116,6 +116,7 @@
   [(UNSPEC_SIN  1)
    (UNSPEC_COS  2)
    (UNSPEC_MOVEQ_MEM 3)
+   (UNSPEC_GOT 4)
   ])
 
 ;; UNSPEC_VOLATILE usage:
@@ -6480,6 +6481,31 @@
     return "rts";
   operands[0] = GEN_INT (current_function_pops_args);
   return "rtd %0";
+})
+
+(define_insn "load_got"
+  [(set (reg:SI PIC_REG)
+	(unspec:SI [(const_int 0)] UNSPEC_GOT))]
+  ""
+{
+  operands[0] = pic_offset_table_rtx;
+  if (TARGET_ID_SHARED_LIBRARY)
+    return "movel %0@(%?), %0";
+  else if (MOTOROLA)
+    {
+      if (m68k_arch_coldfire)
+	/* Load the full 32-bit PC-relative offset of
+	   _GLOBAL_OFFSET_TABLE_ into the PIC register, then use it to
+	   calculate the absolute value.  The offset and "lea"
+	   operation word together occupy 6 bytes.  */
+	return ("move.l #_GLOBAL_OFFSET_TABLE_@GOTPC, %0\n\t"
+		"lea (-6, %%pc, %0), %0");
+      else
+	return "lea (%%pc, _GLOBAL_OFFSET_TABLE_@GOTPC), %0";
+    }
+  else
+    return ("movel #_GLOBAL_OFFSET_TABLE_, %0\n\t"
+	    "lea %%pc@(0,%0:l),%0");
 })
 
 (define_insn "indirect_jump"
