--- a/gcc-4_1-branch/gcc/fortran/ChangeLog
+++ b/gcc-4_1-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR driver/26885
+	* Make-lang.in (GFORTRAN_D_OBJS): Replace gcc.o with
+	$(GCC_OBJS).
+
 2006-09-19 Paul Thomas <pault@gcc.gnu.org>
 	   Steven Bosscher  <steven@gcc.gnu.org>
 
