2006-08-09 Paul Thomas <pault@gcc.gnu.org>
	PR fortran/28600
	* trans-decl.c (gfc_get_symbol_decl): Ensure that the
	DECL_CONTEXT of the length of a character dummy is the
	same as that of the symbol declaration.

	* gfortran.dg/assumed_charlen_function_4.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@117137 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/fortran/ChangeLog
+++ b/gcc-4_1-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,10 @@
+2006-08-09 Paul Thomas <pault@gcc.gnu.org>
+
+	PR fortran/28600
+	* trans-decl.c (gfc_get_symbol_decl): Ensure that the
+	DECL_CONTEXT of the length of a character dummy is the
+	same as that of the symbol declaration.
+
 2006-05-16  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR driver/26885
