--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-09 Paul Thomas <pault@gcc.gnu.org>
+
+	PR fortran/28600
+	* gfortran.dg/assumed_charlen_function_4.f90: New test.
+
 2006-05-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/24879
