--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2006-09-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/28706
+	* gcc.dg/pr28706.c: New test.
+
+	PR c/28712
+	* gcc.dg/pr28712.c: New test.
+
 2006-04-06  Jan Hubicka  <jh@suse.cz>
 
 	PR profile/26399
