--- a/gcc-4_1-branch/gcc/cp/ChangeLog
+++ b/gcc-4_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,19 @@
+2006-09-22  Jason Merrill  <jason@redhat.com>
+
+	PR c++/28996
+	* cvt.c (convert_to_void): Strip COMPONENT_REF to functions.
+
+2006-09-21  Steven Bosscher  <steven@gcc.gnu.org>
+
+	PR c++/29087
+	Backport from mainline:
+	* parser.c (cp_parser_labeled_statement): Return nothing.  Do
+	not take in_statement_expr and in_compound as arguments.  Rename
+	to cp_parser_label_for_labeled_statement.  Parse only the label,
+	not the statement.
+	(cp_parser_statement): Parse the statement of a labeled-statement
+	from here, using tail recursion.
+
 2006-08-22  Jason Merrill  <jason@redhat.com>
 
 	PR c++/28659
