--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-20  Steven Bosscher  <steven@gcc.gnu.org>
+
+	PR middle-end/26983
+	* gcc.dg/pr26983.c: New test.
+
 2006-09-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/28706
